--- a/schliessanlagen-konfigurator/publish/wwwroot/css/site.css
+++ b/schliessanlagen-konfigurator/publish/wwwroot/css/site.css
@@ -617,15 +617,15 @@ html, body {
         height: 25px;
         transform: scale(0.5);
         width: auto;
-        margin-left: -35px;
+        margin-left: -37px;
     }
 
-    #chekerTur {
-        display: flex;
-        transform: scale(0.5);
-        margin-left: -45px;
-        gap:5px;
-    }
+        #chekerTur {
+            display: flex;
+            transform: scale(0.5);
+            margin-left: -50px;
+            gap: 5px;
+        }
     #InformBar {
         margin-top: 30px;
         font-size: 8px;
@@ -685,16 +685,17 @@ html, body {
         max-width: 20px;
     }
 
-    #sclusselInfo2 {  
-        height: 40px;
-        width: 240px;
-        padding: 5px;
-        background: red;
-        color: white;
-        align-items: center;
-        display: flex;
-        margin-top: -100px;
-    }
+        #sclusselInfo2 {
+            grid-template-columns: repeat(5, auto);
+            height: 40px;
+            width: 240px;
+            padding: 5px;
+            background: red;
+            color: white;
+            align-items: center;
+            display: grid;
+            margin-top: -100px;
+        }
         #textInform {
             padding-left: 15px;
             text-align: start;
@@ -721,12 +722,12 @@ html, body {
     #TypeSelectTurItem 
     {
         height:20px;
-        margin-left: -45px;
+        margin-left: -55px;
         transform: scale(0.6);
     }
     #SelectTurItem {
         width: auto;
-       margin-right:20px;
+       margin-right:30px;
     }
     #InfoValue {
         display: grid;
@@ -741,11 +742,12 @@ html, body {
         transform: scale(0.7);
     }
 
-    #ItemTur {
-        gap: 5px;
-        display: flex;
-        align-items: center;
-    }
+        #ItemTur {
+            margin-left: 15px;
+            gap: 5px;
+            display: flex;
+            align-items: center;
+        }
 
     .TexCountTur {
         text-align: center;
@@ -790,12 +792,13 @@ html, body {
             font-size: 5px !important;
         }
         #counterTur {
-            margin-right: 1px;
+            margin-right: 5px;
             margin-top: 5px;
+            display: flex;
         }
 
             #counterTur > svg {
-                margin-right: 1px;
+                margin-right: 3px !important;
                 height: 5px;
                 width: 5px;
             }
