--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Schop/Index.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Schop/Index.cshtml
@@ -57,7 +57,9 @@
     </button>
 
     <button class="btn danger mb-4" type="button" onclick="cleanSort()">
-        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-refresh-cw"><polyline points="23 4 23 10 17 10"></polyline><polyline points="1 20 1 14 7 14"></polyline><path d="M3.51 9a9 9 0 0 1 14.85-3.36L23 10M1 14l4.64 4.36A9 9 0 0 0 20.49 15"></path></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-refresh-cw"><polyline points="23 4 23 10 17 10"></polyline><polyline points="1 20 1 14 7 14"></polyline><path d="M3.51 9a9 9 0 0 1 14.85-3.36L23 10M1 14l4.64 4.36A9 9 0 0 0 20.49 15"></path>
+            <title>cleanSort</title>
+        </svg>
         </button>
 
     <div class="input-group mb-4">
@@ -78,8 +80,8 @@
             </h4>
             <ul class="list-group list-group-flush">
 
-                <li class="list-group-item active"><a href="@Url.Action("Index","Schop")"> <img src="@("/compression/doppelzylinder.WEBP")" height="24" width="24" /> Zylinder</a></li>
-                <li class="list-group-item "><a href="@Url.Action("Key_coppy","Schop")"> <img src="@("/compression/doppelzylinder.WEBP")" height="24" width="24" /> Ersatzschlüssel / Nachschlüssel</a></li>
+                <li class="list-group-item active"><a href="@Url.Action("Index","Schop")"> <img alt="doppelzylinder" src="@("/compression/doppelzylinder.WEBP")" height="24" width="24" /> Zylinder</a></li>
+                <li class="list-group-item "><a href="@Url.Action("Key_coppy","Schop")"> <img alt="doppelzylinder" src="@("/compression/doppelzylinder.WEBP")" height="24" width="24" /> Ersatzschlüssel / Nachschlüssel</a></li>
 
             </ul>
         </div>
@@ -90,8 +92,8 @@
             </h4>
 
             <ul class="list-group list-group-flush">
-                <li class="list-group-item "><a href="@Url.Action("Index","Schop")"> <img src="@("/compression/doppelzylinder.WEBP")" height="24" width="24" /> Zylinder</a></li>
-                <li class="list-group-item "><a href="@Url.Action("Index","Schop")"> <img src="@("/compression/doppelzylinder.WEBP")" height="24" width="24" /> Transponder</a></li>
+                <li class="list-group-item "><a href="@Url.Action("Index","Schop")"> <img alt="doppelzylinder" src="@("/compression/doppelzylinder.WEBP")" height="24" width="24" /> Zylinder</a></li>
+                <li class="list-group-item "><a href="@Url.Action("Index","Schop")"> <img alt="doppelzylinder" src="@("/compression/doppelzylinder.WEBP")" height="24" width="24" /> Transponder</a></li>
 
             </ul>
         </div>
@@ -161,7 +163,7 @@
         {
             <div class="ExelItem shadow-lg mb-4 bg-body-tertiary rounded">
                 <div id="productImage">
-                    <img decoding="async" id="ImgSelecter" loading="lazy" style="border: 2px solid rgba(237,237,237,0.5);" src="@("~/compression/"+@item.ImageName)" asp-append-version="true" width="300px" height="300px" />
+                    <img decoding="async" id="ImgSelecter" alt="@item.Name" loading="lazy" style="border: 2px solid rgba(237,237,237,0.5);" src="@("~/compression/"+@item.ImageName)" asp-append-version="true" width="300px" height="300px" />
                 </div>
                 <div id="productMenuInfo">
                     <div id="ProductNameUndCost">
