--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Shared/_Layout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Shared/_Layout.cshtml
@@ -3,17 +3,17 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Schliessanlagen Konfigurator</title>  
+    <title>@ViewData["Title"]</title>  
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" defer />
     <link rel="stylesheet" as="style" href="~/css/site.min.css" asp-append-version="true" />
-     <link rel="icon" type="image/x-icon" loading="lazy" href="@("/Image/SD_Logo.svg")" />  
+     <link rel="icon" type="image/x-icon" loading="lazy" alt="logo" href="@("/Image/SD_Logo.svg")" />  
 </head>
 <body>
 
     <header>
         <nav class="navbar navbar-expand-xl navbar-toggleable-xl navbar-light bg-white border-bottom box-shadow ">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-action="IndexKonfigurator" asp-controller="Konfigurator"> <img loading="lazy" src="@("/Image/SD_Logo.svg")" height="60" width="60" alt="schliessanlagen.discount" /> Schliessanlagen Konfigurator</a>
+                <a class="navbar-brand" asp-area="" asp-action="IndexKonfigurator" asp-controller="Konfigurator"> <img loading="lazy" alt="schliessanlagen.discount_logo" src="@("/Image/SD_Logo.svg")" height="60" width="60" alt="schliessanlagen.discount" /> Schliessanlagen Konfigurator</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
