--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Shared/_Layout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Shared/_Layout.cshtml
@@ -6,7 +6,8 @@
     <title>@ViewData["Title"]</title>  
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" defer />
     <link rel="stylesheet" as="style" href="~/css/site.min.css" asp-append-version="true" />
-     <link rel="icon" type="image/x-icon" loading="lazy" alt="logo" href="@("/Image/SD_Logo.svg")" />  
+     <link rel="icon" type="image/x-icon" loading="lazy" alt="logo" href="@("/Image/SD_Logo.svg")" />
+    <link rel="canonical" href="https://schliessanlagen.discount/" />
 </head>
 <body>
 
