--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Areas/Identity/Pages/Account/Manage/PagePersonalOrders.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Areas/Identity/Pages/Account/Manage/PagePersonalOrders.cshtml
@@ -550,6 +550,8 @@
     </div>
 </div>
 @section Scripts {
+    <script src="https://x.klarnacdn.net/kp/lib/v1/api.js"></script>
+
 <script src="https://www.paypal.com/sdk/js?client-id=AcBDGr9EZyKwRHBxrvvXq2u-vFWhg-e2l09CS97O5fbcwx0JYkjJRfsNUS_lJ6QjdTOwGe830IkBill9&currency=EUR"></script>
 <script>
 
@@ -641,7 +643,7 @@
                 alert('Transaktion fehlgeschlagen');
             }
         }).render(`#paypal-button-container-${id}`);
-        
+
     }
 
 
