--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Schop/zylinder_page.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Schop/zylinder_page.cshtml
@@ -232,6 +232,30 @@
         </div>
     }
     </form>
+
+    <div id="slide_product" class="shadow-lg  mb-5 bg-body-tertiary rounded">
+        <div>
+            <div style="border-radius: 50%;background: white;padding: 10px;" onclick="arrowLeft()">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 12" width="12" height="12"><path d="M3.587 6.025c0 .2.1.4.2.5l3.3 3.3c.3.3.8.3 1.1 0 .3-.3.3-.8 0-1.1l-2.7-2.7 2.7-2.7c.3-.3.3-.8 0-1.1-.3-.3-.8-.3-1.1 0l-3.2 3.2c-.2.2-.3.4-.3.6Z"></path></svg>
+            </div>
+        </div>
+        @foreach (var list in ViewBag.AllDoppel)
+        {
+               <div id="item_block_slide">
+                   <div>
+                    <h4>@list.Name</h4>
+                   </div>
+                   <div>
+                    <img src="@("~/compression/"+@list.ImageName)" asp-append-version="true" width="300px" height="300px" />
+                   </div>
+               </div>
+        }
+        <div>
+            <div style="border-radius: 50%;background: white;padding: 10px;" onclick="arrowRight()">
+                <svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 12" width="12" height="12"><path d="M4.7 10c-.2 0-.4-.1-.5-.2-.3-.3-.3-.8 0-1.1L6.9 6 4.2 3.3c-.3-.3-.3-.8 0-1.1.3-.3.8-.3 1.1 0l3.3 3.2c.3.3.3.8 0 1.1L5.3 9.7c-.2.2-.4.3-.6.3Z"></path></svg>
+            </div>
+        </div>
+    </div> 
 </div>  
 
 @section scripts
@@ -254,6 +278,57 @@
         let kleinPrice = @Html.Raw(ViewBag.DopelzylinderInternKleinPreis)|| null;
         let normalDopelSize = @Html.Raw(ViewBag.DopelzylinderInternNormal)|| null;
         let kleinSize = @Html.Raw(ViewBag.DopelzylinderInternKlein)|| null;
+
+        let sliderItem = document.getElementById("slide_product");
+        let divChildren = sliderItem.querySelectorAll('#item_block_slide');
+
+        let numItem = -1; 
+
+        function cheked_count_item() 
+        {
+            for (let i = 0; i < divChildren.length; ) 
+            {
+                if (i < 4) 
+                {
+                    numItem++;
+                    divChildren[i].style.display = "block";
+                    
+                }
+                else {
+                    divChildren[i].style.display = "none";
+                }
+                i++;
+            }
+
+        }
+        
+        cheked_count_item();
+
+        function arrowLeft()
+        {
+            if (numItem > 3) 
+            {
+                let firstItem = numItem;
+                divChildren[firstItem].style.display = "none";
+                numItem--;
+
+                let x = numItem - 3;
+                divChildren[x].style.display = "block";
+            }  
+        }
+        function arrowRight() 
+        {
+            if (numItem >= 3 && numItem < (divChildren.length - 1)) 
+            {              
+                let firstItem = numItem - 3;
+                divChildren[firstItem].style.display = "none";
+
+                numItem++;
+                divChildren[numItem].style.display = "block";
+            }
+        }
+
+
 
         function procent() {
             let proc = document.getElementById("Procent");
