--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Shared/_Layout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
     <header>
         <nav class="navbar navbar-expand-xl navbar-toggleable-xl navbar-light bg-white border-bottom box-shadow ">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-action="IndexKonfigurator" asp-controller="Konfigurator"> <img loading="lazy" alt="schliessanlagen.discount_logo" src="@("/Image/SD_Logo.svg")" height="60" width="60" alt="schliessanlagen.discount" /> Schliessanlagen Konfigurator</a>
+                <h1 class="navbar-brand" asp-area="" asp-action="IndexKonfigurator" asp-controller="Konfigurator"> <img loading="lazy" alt="schliessanlagen.discount_logo" src="@("/Image/SD_Logo.svg")" height="60" width="60" alt="schliessanlagen.discount" /> Schliessanlagen Konfigurator</h1>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
