--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/wwwroot/css/site.css
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/wwwroot/css/site.css
@@ -6,6 +6,14 @@
     font-size: 26px;
     font-display: swap;
 }
+#slide_product {
+    padding: 10px;
+    margin-top: 50px;
+    justify-content: center;
+    display: flex;
+    gap: 20px;
+    text-align: center;
+}
 #herschteller_sort {
     text-align: center;
     background: var(--text-color-primary);
